--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,8 @@ site_name: Test van Syps
 site_url: https://readthedocs.org/projects/klantinteractie-servicesysteem/
 
 nav:
-  - Home: intro.md
+  - Home: index.md
+  - Intro: intro.md
   - Installatie: INSTALLATION.md
   
 theme: readthedocs
