--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -16,9 +16,8 @@ build:
     # golang: "1.19"
 
 # Build documentation in the "docs/" directory with Sphinx
-mkdocs:
-  configuration: mkdocs.yml
-  fail_on_warning: true
+sphinx:
+  configuration: docs/conf.py
 
 # Optionally build your docs in additional formats such as PDF and ePub
 # formats:
@@ -28,6 +27,6 @@ mkdocs:
 # Optional but recommended, declare the Python requirements required
 # to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-python:
-   install:
-   - requirements: docs/requirements.txt
+# python:
+#    install:
+#    - requirements: docs/requirements.txt
