--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -15,6 +15,14 @@ build:
     # rust: "1.64"
     # golang: "1.19"
 
+#  overgenomen uit sphinx_rtd_theme/.readthedocs.yml
+
+python:
+  install:
+    - requirements: docs/requirements.txt
+    - method: pip
+      path: .
+
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
   configuration: docs/conf.py
